# cms-ss-spms

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.prod.yml  manage.py  pyproject.toml
.github/workflows/: cd.yml  ci.yml
apps/audit/: models.py  services.py
apps/audit/migrations/: 0001_initial.py
apps/identity/: admin.py  apps.py  auth_backends.py  forms.py  middleware.py  models.py  models_auth.py  permissions_registry.py  services.py  signals.py  urls.py  views.py
apps/identity/migrations/: 0001_initial.py  0002_alter_useraccount_is_active.py  0003_useraccount_requires_password_change.py
apps/imports/: admin.py  models.py  services.py  views.py
apps/melody/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/org/: admin.py  apps.py  context_processors.py  models.py  services.py
apps/people/: admin.py  apps.py  models.py  services.py  urls.py  views.py
apps/reports/: admin.py  models.py  services.py
apps/sundayschool/: admin.py  apps.py  forms.py  models.py  services.py  signals.py  urls.py  views.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
docker/nginx/: nginx.conf
docs/: frontend_requirements.md  status_report.md
docs/phase 1/: README.md  domain_model.md  requirements.md
docs/phase 2/: README.md  implementation_plan.md  task.md
scripts/: test.sh
templates/: approvals_queue.html  base.html  home.html  login.html  students_list.html
templates/layouts/: base.html  dashboard.html
tests/: smoke_test.py
(+44 files in other folders)
