[project]
name = "ss-spms"
version = "0.1.0"
description = "EOTC Sunday School Students Profile Management System"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "psycopg>=3.1.18",
    "ethioqen>=0.1.5",
    "reportlab>=4.1.0",
    "openpyxl>=3.1.2",
    "Pillow>=10.2.0",
    "django-environ>=0.11.2",
    "django-htmx>=1.17.2",
    "pytest>=8.0.0",
    "pytest-django>=4.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "UP"]
ignore = []

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--reuse-db"

[tool.setuptools]
package-dir = {"" = "."}
